Do network requests in parallel and avoid flicker when loading the log viewer.

--- a/ui/logviewer/logviewer.css
+++ b/ui/logviewer/logviewer.css
@@ -31,5 +31,5 @@ body,
 }
 
 .run-data {
-  max-height: 250px;
+  height: 250px;
 }
